# hackathon

concordium/: README.md
concordium/app/voting/src/: HomePage.js  config.js
concordium/contracts/karnacampaign01/: Cargo.toml
concordium/karna/: grant-proposal.md
concordium/karna/app/: README.md
concordium/karna/app/src/: App.js  CreateCampaignPage.js  HomePage.js  config.js
concordium/karna/app/voting/src/: Campaign.js  CreateElectionPage.js  HomePage.js  VotePage.js  Wallet.js  data.js
concordium/karna/contracts/karna/: Cargo.toml
concordium/karna/contracts/karnacampaign01/src/: lib.rs
concordium/karna/doc/: Milestone.xlsx
concordium/karna/karna/: campaign.json
concordium/karna/karna/src/: lib.rs
concordium/karna/karnacampaign01/: claim.json
