# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "karna"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = [ "Lokeshwaran Boopathy <lokeshwaran.boopathy@oracle.com>" ]
description = "Karna is humanitarian non profit project on Concordium blockchain"

[features]
default = ["std"]
std = ["concordium-std/std"]
wee_alloc = ["concordium-std/wee_alloc"]

[dependencies]
concordium-std = {version = "7.0", default-features = false}

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
